syntax = "proto3";
package ojo.gas_estimate.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/ojo-network/ojo/x/gas_estimate/types";

option (gogoproto.goproto_getters_all) = false;

// Params defines the parameters for the gas_estimate module.
message Params {
  // The contracts we'll send gas_estimate messages to.
  repeated Contract contract_registry = 1;
  // The gas limit for the gas_estimate messages. E.x., "1000000"
  string gas_limit = 2;
  // The gas adjustment multiplier for the gas_estimate messages. E.x., "1.5"
  string gas_adjustment = 3;
}

// Contract defines a contract that we
message Contract {
  string address = 1;
  string network = 2;
}

message GasEstimates {
  repeated GasEstimate gas_estimates = 1;
}

message GasEstimate {
  string network = 1;
  int64 gas_estimate = 2;
}
